tests/extensions/imports/valid/importDifferentDirectory.wacc
# Output: 
# 43

import "../lib/difflib.wacc";
begin
    int x = call difflib::f();
    println x
end