tests/extensions/imports/semanticErr/noTransitiveImports.wacc
import "lib/t.wacc";
begin
    int a = call b::b();
    print a
end